# VINS-Fusion-Understood

vins_estimator/: CMakeLists.txt
